<resources>
    <string name="app_name">Sportstalk SDK Demo</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- Strings used for fragments for navigation -->

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="invalid_displayname">Invalid Display Name…</string>
    <string name="invalid_handlename">Invalid Handle Name…</string>
    <string name="invalid_profile_link">Invalid Profile Link…</string>
    <string name="invalid_picture_link">Invalid Picture Link…</string>
    <string name="account_created_successfully">Account created successfully…</string>

    <string name="select_a_room">Select a Room</string>
    <string name="select_a_demo_user">Select a Demo User</string>
    <string name="actions">Actions</string>
    <string name="enter_exit">Enter/Exit</string>
    <string name="open">Open</string>


    <string name="profanity_filter">Profanity Filter</string>
    <string name="send_a_message">Send a message…</string>

    <string name="rooms">Rooms</string>
    <string name="create_an_account">Create an Account</string>
    <string name="display_name">Display Name</string>
    <string name="handle_username">Handle / Username (ex. \"@username_101\")</string>
    <string name="profile_link">Profile Link</string>
    <string name="photo_link">Photo Link</string>

    <string name="discard_changes">Discard changes?</string>

    <string name="create_chatroom">Create Chatroom</string>
    <string name="room_name">Room Name</string>
    <string name="room_description">Room Description(Optional)</string>
    <string name="room_custom_id">Room Custom ID(Optional)</string>
    <string name="action_enabled">Action Enabled</string>
    <string name="action_disabled">Action DISABLED</string>
    <string name="enter_exit_enabled">Enter/Exit Enabled</string>
    <string name="enter_exit_disabled">Enter/Exit DISABLED</string>
    <string name="room_is_open">Room is OPEN</string>
    <string name="room_is_closed">Room is CLOSED</string>
    <string name="profanity_filter_enabled">Profanity Filter Enabled</string>
    <string name="profanity_filter_disabled">Profanity Filter DISABLED</string>
    <string name="invalid_roomname">Invalid Room Name…</string>
    <string name="chatroom_successfully_created" formatted="true">Chatroom \"%s\" successfully created…</string>

    <string name="account_settings">Account Settings</string>
    <string name="submit">Submit</string>
    <string name="delete_account">Delete Account</string>
    <string name="ban_account">Ban Account</string>
    <string name="restore_account">Restore Account</string>
    <string name="save">Save</string>
    <string name="team">Team</string>
    <string name="statistics">Statistics</string>
    <string name="live_chat">Live Chat</string>
    <string name="highlights">Highlights</string>
    <string name="videos">Videos</string>
    <string name="search">Search</string>
    <string name="send_announcement">Send Announcement</string>
    <string name="announcement_successfully_sent">Announcement successfully sent…</string>
    <string name="account_successfully_updated">Account successfully updated…</string>
    <string name="account_successfully_deleted">Account successfully deleted…</string>
    <string name="account_successfully_banned">Account successfully banned…</string>
    <string name="account_successfully_restored">Account successfully banned…</string>

    <string name="something_went_wrong_please_try_again">Something went wrong. Please try again later…</string>
    <string name="unable_to_join_room_please_try_again">Unable to join room. Please try again…</string>
    <string name="join">Join</string>
    <string name="join_room">Join Room</string>
    <string name="leave_room">Leave Room</string>
    <string name="reply_to" formatted="true">Reply to %s</string>
    <string name="others_replied_to" formatted="true">%s replied to %s</string>
    <string name="you_replied_to" formatted="true">You replied to %s</string>

    <string name="chat_message_tap_option_like">Like</string>
    <string name="chat_message_tap_option_reply">Reply</string>
    <string name="chat_message_tap_option_report">Report</string>
    <string name="chat_message_tap_option_purge_user_messages">Purge User Messages</string>
    <string name="chat_message_tap_option_flag_as_deleted">Flag as Deleted</string>
    <string name="chat_message_tap_option_delete_permanently">Delete Permanently</string>
    <string name="chat_message_tap_option_bounce">Bounce</string>
    <string name="chat_message_tap_option_unbounce">Unbounce</string>
    <string-array name="chat_message_tap_options">
        <item>@string/chat_message_tap_option_like</item>
        <item>@string/chat_message_tap_option_reply</item>
        <item>@string/chat_message_tap_option_report</item>
        <item>@string/chat_message_tap_option_purge_user_messages</item>
        <item>@string/chat_message_tap_option_flag_as_deleted</item>
        <item>@string/chat_message_tap_option_delete_permanently</item>
    </string-array>

    <string name="the_bouncer_shows_handle_the_way_out" formatted="true">The bouncer shows %s the way out.</string>
    <string name="the_bouncer_has_allowed_handle_to_enter_the_room" formatted="true">The bouncer has allowed %s to enter the room.</string>

    <string name="message_successfully_removed">Message successfully removed…</string>
    <string name="permanent_if_no_replies">Do you want this message to get permanently deleted if no replies were received?</string>
    <string name="message_successfully_reported">Message successfully reported…</string>
    <string name="success_purge_user_messages">Successfully purged user messages…</string>

    <string name="chatroom_participants">Chatroom Participants</string>
    <string name="banned">Banned</string>
    <string name="bounced_from_the_room">Bounced from the room</string>

    <string name="ban_handle" formatted="true">Ban %s</string>
    <string name="remove_ban_from_handle" formatted="true">Remove Ban from %s</string>
    <string name="bounce_handle" formatted="true">Bounce %s</string>
    <string name="remove_bounce_from_handle" formatted="true">Remove Bounce from %s</string>
    <string name="purge_messages_from_handle" formatted="true">Purge messages from %s</string>

    <string name="are_you_sure">Are you sure?</string>
    <string name="reset">Reset</string>
    <string name="inapp_settings">In-app Settings</string>
    <string name="url_endpoint">URL Endpoint</string>
    <string name="auth_token">Auth Token</string>
    <string name="app_id">App ID</string>
    <string name="app_version" formatted="true">Version %s</string>
    <string name="apply">Apply</string>

    <string name="reset_was_successful">Reset was successful…</string>
    <string name="n_fans_inside" formatted="true">%s fans inside</string>
    <string name="delete_room">Delete Room</string>

    <string name="delete_all_events">Delete All Events</string>

    <string name="added_date" formatted="true">Added\n%s</string>
    <string name="modified_date" formatted="true">Modified\n%s</string>
    <string name="moderation_type" formatted="true">Moderation: %s</string>
    <string name="max_reports_n" formatted="true">Max reports: %s</string>
    <string name="inroom_n" formatted="true">In-room: %s</string>
    <string name="no">No</string>
    <string name="flag_as_deleted">Flag as deleted</string>
    <string name="chatroom_successfully_updated" formatted="true">Chatroom \"%s\" successfully updated…</string>
    <string name="all_events_in_this_chatroom_successfully_deleted">All event(s) in this Chatroom has been successfully deleted…</string>
    <string name="chatroom_successfully_deleted" formatted="true">Chatroom \"%s\" successfully deleted…</string>

    <string name="chatevents_from_handle_successfully_purged" formatted="true">Chat Events from \"%s\" successfully purged…</string>
    <string name="chat_likes_count" formatted="true">👍 x%s</string>

</resources>
