<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    app:cardBackgroundColor="@color/cardview_light_background"
    app:cardUseCompatPadding="false"
    app:contentPaddingBottom="8dp"
    app:cardCornerRadius="0dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/acivHeader"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            app:srcCompat="@android:color/holo_blue_dark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/actvSlug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textColor="@android:color/secondary_text_light_nodisable"
            android:rotation="350"
            app:layout_constraintTop_toBottomOf="@+id/acivHeader"
            app:layout_constraintBottom_toTopOf="@+id/acivHeader"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            tools:text="post-test-room-2020-05-04-12-30-04"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/actvRoomName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintTop_toBottomOf="@+id/acivHeader"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="16dp"
            android:textAppearance="?attr/textAppearanceHeadline1"
            android:maxLines="2"
            android:ellipsize="end"
            tools:text="Test Room Post Moderated 3"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/actvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintTop_toBottomOf="@+id/actvRoomName"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="12dp"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textColor="@android:color/secondary_text_light_nodisable"
            android:maxLines="3"
            android:ellipsize="end"
            tools:text="Chat Room Newly Created"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/acivInRoomCount"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            app:srcCompat="@drawable/ic_room_user"
            app:layout_constraintTop_toBottomOf="@+id/chipGroupConfigs"
            app:layout_constraintBottom_toTopOf="@+id/chipGroupConfigs"
            app:layout_constraintRight_toLeftOf="@+id/actvInRoomCount"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/actvInRoomCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="12dp"
            android:textSize="14dp"
            android:textStyle="bold"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textColor="@android:color/secondary_text_light"
            app:layout_constraintBottom_toTopOf="@+id/acivInRoomCount"
            app:layout_constraintTop_toBottomOf="@+id/acivInRoomCount"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="3"
            />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupConfigs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/acivInRoomCount"
            app:layout_constraintTop_toBottomOf="@+id/actvDescription"
            >

            <com.google.android.material.chip.Chip
                android:id="@+id/chipActions"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                app:textStartPadding="4dp"
                app:textEndPadding="2dp"
                android:text="@string/actions"
                tools:checked="true"
                tools:enabled="true"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipEnterExit"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                app:textStartPadding="4dp"
                app:textEndPadding="2dp"
                android:text="@string/enter_exit"
                tools:checked="false"
                tools:enabled="false"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipOpen"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                app:textStartPadding="4dp"
                app:textEndPadding="2dp"
                android:text="@string/open"
                tools:checked="true"
                tools:enabled="true"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipProfanityFilter"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                app:textStartPadding="4dp"
                app:textEndPadding="2dp"
                android:text="@string/profanity_filter"
                tools:checked="false"
                tools:enabled="false"
                />

        </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>